# wiggum

./: .buildinfo  .gitignore  .travis.yml  API.html  Dockerfile  JS_API.html  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  app_structure.html  app_user_manual.html  corr_speed_comp.ipynb  dev_wiggum_app.html  docker-compose.yml  docs_overview.html  genindex.html  index.html  main.py  objects.inv  organization.html  package_user_manual.html  py-modindex.html  pyproject.toml  requirements.txt  run.py  search.html  searchindex.js  setup.py  test_corr_v2.ipynb  timeit_mod.ipynb  trend_objects.html  user_manual.html  wiggum_app.html
.ipynb_checkpoints/: corr_speed_comp-checkpoint.ipynb  timeit_mod-checkpoint.ipynb
_modules/: builtins.html  index.html
_sources/: JS_API.rst.txt  docs_overview.rst.txt  index.rst.txt  organization.rst.txt  wiggum_app.rst.txt
_static/: alabaster.css
data/: Colleges.csv  NCED_longtermath_age17_race.csv  NCED_longtermath_age17_race_float.csv  Nasdaq 1.csv  NasdaqFiveYears.csv  NasdaqThreeYears.csv  SPData.py  adult_new 3.csv  agg_south_america_usa_can_mex_ten_years_df.csv  agg_three_countries_ten_years_df.csv  agg_top_five_south_usa_can_mex_ten_years_df.csv  agg_usa_ten_years_five_importers.csv  agg_usa_ten_years_ten_countries.csv  auto2.csv  compas-c.csv  compas-scores-two-year-clean.csv  eight_countries_ten_years_industry_df.csv  expenditure.csv  house.csv  nced_about.txt  per_person_gender_pay_gap.csv  state_hit_rate_min_cols_COCTFLILMDMAMOMTNENCOHRISCTXVTWAWI.csv  three_countries_ten_years_industry_df.csv  us_case_test.csv
(+510 files in other folders)
